ThreadSanitizer: data race [@ free] vs. [@ __tsan_atomic64_fetch_sub] involving pointer race [@ mozilla::gfx::SourceSurfaceCapture::~SourceSurfaceCapture]
Categories
(Core :: MFBT, defect)
Tracking
()
People
(Reporter: decoder, Assigned: decoder)
References
(Blocks 1 open bug)
Details
(Keywords: testcase)
Crash Data
Attachments
(2 files)
The attached crash information was detected while running CI tests with ThreadSanitizer on mozilla-central revision 66531295716a.
This looks bad because we seem to be racing on a RefPtr. I grepped the test logs and the first test I found that triggered this seemed to be editor/libeditor/tests/test_bug1574596.html.
Why fix races?
Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating
If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races
Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].
[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races
If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.
| Assignee | ||
Comment 1•6 years ago
|
||
| Assignee | ||
Comment 2•6 years ago
|
||
After seeing a similar pattern in other race reports, I realized that this might be a false positive:
Our thread-safe refcounting uses std::atomic_thread_fence and fences are not supported by TSan currently. I will try to confirm with the developers that this is still the case.
Maybe we can also annotate this somehow.
| Assignee | ||
Comment 3•6 years ago
|
||
Updated•6 years ago
|
Comment 5•6 years ago
|
||
| bugherder | ||
Comment 6•6 years ago
|
||
I assume this can ride the trains.
Updated•5 years ago
|
Description
•