Bug 1600312 - Use atomic load instead of fence for RefCounted with TSan. r=froydnj

Differential Revision: https://phabricator.services.mozilla.com/D55948

--HG--
extra : moz-landing-system : lando